--- a/index.html
+++ b/index.html
@@ -189,42 +189,42 @@
                 title: "مِنْ رَحِمِ التاريخِ وُلِدَتْ هُويَّتِي!",
                 text: "أنا التي وُلِدْتُ هنا؛ على هذه الأرضِ. ولِيِ عديدٌ من الأسماءِ.",
                 icon: "⏳",
-                imageUrl: "https://placehold.co/1920x1080/6F5C4B/FFFFFF?text=Ancient+History",
+                imageUrl: "https://raw.githubusercontent.com/MahmoudSaeedElkomy/oaisisstroy/main/assets/water-4188_1280.jpg",
                 ambientSound: 'desert_wind'
             },
             {
                 title: "واحةٌ من رمالٍ وماءٍ",
                 text: "في غابر التاريخ، وفي لحظةٍ ما، تلاقت مياه النيل مع بحيرةٍ مُرَّة. فتشبعت رِمالِيِ الصفراء مَاَءً مالحًا عذبًا! ثم فاضَتْ تُرْبَتِي مِنَ الثَمَراتِ أَشْجَارًا، واستحالت الأرضُ؛ باتحاد الأشجارِ المثمرات، مع ما عداها من شجرٍ كثيفٍ، إلى ما يشبه الواحة! كان موقعُ قدميَّ مُذهلًا! كُنتُ في الملتقى تمامًا، بين أرض الشام وأرض مصر! على الحدود من سيناء المباركة!",
                 icon: "🌊🌳",
-                imageUrl: "https://placehold.co/1920x1080/4CAF50/FFFFFF?text=Desert+Oasis",
+                imageUrl: "https://raw.githubusercontent.com/MahmoudSaeedElkomy/oaisisstroy/main/assets/pexels-mohamedelaminemsiouri-2097442.jpg",
                 ambientSound: 'oasis_life'
             },
             {
                 title: "بوابةُ الحضاراتِ وملتقى التجارةِ",
                 text: "كُنتُ كالبوابةِ التي يَمُرُّ منها قاصدِ هذه البلاد، أو تلك! وكذلك؛ لو نَظَرْتَ هناك، وأمعنتَ النَظَرْ؛ لَوَجَدْتَنِي في مُنْتَصَفِ طَريقِ تجارةٍ؛ ما بين بَحْرَينِ؛ بلَونَينِ، أحمرٍ وأبيضِ! كان موقِعِي مثاليًا! في الواقع؛ كان عبقريًا! أنا صحراءُ من جهاتي الأربع! وفي المنتصف تمامًا، أنا واحةٍ للراحة! كم استقْبَلْتُ مَارًّا من هنا! مُتَّجِرًا كان؛ أو عابرُ سبيلِ؟ كم من ملوك الأرضِ مرُّوا من هنا؛ غازينَ، أو فاتحينَ؟ كم من الصالحينَ! أنا هنا منذ أصبح التاريخ صُبحًا. وهُويَّتِي هي الأرضُ. أنا واحة! ولِيِ عديدٌ من الأسماءِ.",
                 icon: "🗺️🕌",
-                imageUrl: "https://placehold.co/1920x1080/D4A056/FFFFFF?text=Trade+Route+Gateway",
+                imageUrl: "https://raw.githubusercontent.com/MahmoudSaeedElkomy/oaisisstroy/main/assets/pexels-sid-mirza-154798538-16690057.jpg",
                 ambientSound: 'trade_hub'
             },
             {
                 title: "تغيراتُ العصرِ وقناةُ السويسِ",
                 text: "في عصركم هذا! دعاني مَلِكًا من ملوكِ مصر باسمه. وَاحَتُهُ؛ يقصد! ومنذ أن دعاني باسمه؛ أصبَحتُ واحةُ كُلِّ مَنْ مَلَكَ بَعْدَهُ. إلا أنه قد طَرَأَنِي بعض التغير! إذ حجزت قناةٍ؛ شُقَّتْ ما بين بَحْرَينِ، إلى إختلافٍ في طبيعتِيِ. لم أعُد أرى سيناء الحبيبة كما اعتدْت أن أراها سابقًا! حتى قوافل التجار التي كانت كثيرًا ما تستريحُ تحتَ أشجاري؛ استبدلتْ سفينة الصحراء بسفينةٍ أخرى تحملُ بضائعَهم على الماء! لكني كنت قد بدأت أستحيل بالفعل إلى مدينةٍ، وقد استقر المُقام ببعض من الأغراب، بيضَ الوجوه شقرًا، في رحابي. يديرون شئون القناةِ التي شُقَّت على وجهي! وانضم بعض أهل مصر من الزُرَّاعِ يفلحون تُربَتي؛ وللعجبِ، أنتجت أرضي أشهى الفاكهة وأخرجت بحيراتي أشهر الأسماك!",
                 icon: "🚢🏙️",
-                imageUrl: "https://placehold.co/1920x1080/87CEEB/FFFFFF?text=Suez+Canal+Modernization",
+                imageUrl: "https://raw.githubusercontent.com/MahmoudSaeedElkomy/oaisisstroy/main/assets/pexels-george-pak-7972725.jpg",
                 ambientSound: 'urban_transformation'
             },
             {
                 title: "الترحيبُ والصمودُ: هُويَّتِي",
                 text: "كم أحبُّ هُويَّتِي! أنا دومًا مُرَحِبه. أحب الابتسام. حتى إن شعاري الذي استقبل به الزوار يبدأ به. ابتسم.. أنت في حضرتي! ثم عانيتُ ويلات الحروب؛ لكني صمدت! بل أني أذكر لحظة عبورِ كتائب الإيمان، تسترد لعيني، سيناء الحبيبة! لحظة دحرنا المعتدي الغازي.",
                 icon: "😊🛡️",
-                imageUrl: "https://placehold.co/1920x1080/FFC0CB/FFFFFF?text=Resilience+Welcome",
+                imageUrl: "https://raw.githubusercontent.com/MahmoudSaeedElkomy/oaisisstroy/main/assets/graduation-4502796_1280.jpg",
                 ambientSound: 'resilience_spirit'
             },
             {
                 title: "جامعةُ قناةِ السويس: منارةُ العلمِ",
                 text: "من بعدها؛ بدأ البناء على نصرٍ أتى. فنبتت بأحشائي منارة العلم التي، أفخر بها، وما تغرسه من وعي! أقدم إليكم؛ جامعة قناة السويس! منارة العلم.",
                 icon: "🎓💡",
-                imageUrl: "https://placehold.co/1920x1080/DAA520/FFFFFF?text=University+Campus",
+                imageUrl: "https://raw.githubusercontent.com/MahmoudSaeedElkomy/oaisisstroy/main/assets/man-6027027_1280.jpg",
                 ambientSound: 'academic_aura'
             }
         ];
